# path_tracer

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  camera.h  compile_commands.json  helpers.h  hitable.h  hitable_list.h  image.h  main.cpp  material.h  path_tracer.cpp  ray.h  sphere.h  texture.h  thread_pool.h  triangle.h  vec3.h  xy_rect.h
include/path_tracer/: camera.h  helpers.h  hitable.h  hitable_list.h  image.h  material.h  ray.h  sampler.h  sphere.h  texture.h  thread_pool.h  triangle.h  vec2.h  vec3.h  xy_rect.h
src/: main.cpp
